--- a/KUSINELLA/kusinella.html
+++ b/KUSINELLA/kusinella.html
@@ -1,1 +1,36 @@
-text
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Clickable Images</title>
+    <link rel="stylesheet" href="kusinella.css">
+</head>
+<body>
+
+<h1> Kusinella </h1>
+
+  <p> Breakfast </p>
+
+
+<div class="row">
+    <a href="https://example1.com"><img src="image1.jpg" alt="Image 1"></a>
+    <a href="https://example2.com"><img src="image2.jpg" alt="Image 2"></a>
+    <a href="https://example3.com"><img src="image3.jpg" alt="Image 3"></a>
+</div>
+    
+<p> Lunch/Dinner </p>
+
+<div class="row">
+    <a href="https://example4.com"><img src="image4.jpg" alt="Image 4"></a>
+    <a href="https://example5.com"><img src="image5.jpg" alt="Image 5"></a>
+    <a href="https://example6.com"><img src="image6.jpg" alt="Image 6"></a>
+</div>
+
+<p> Dessert </p>
+
+<div class="row">
+    <a href="https://example1.com"><img src="image7.jpg" alt="Image 7"></a>
+    <a href="https://example2.com"><img src="image8.jpg" alt="Image 8"></a>
+    <a href="https://example3.com"><img src="image9.jpg" alt="Image 9"></a>
+</div>
+
+</body>
