--- a/KUSINELLA/kusinella.html
+++ b/KUSINELLA/kusinella.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Clickable Images</title>
-    <link rel="stylesheet" href="kusinella.css">
+    <title>Welcome to Kusinella</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
