--- a/KUSINELLA/kusinella_recipe.html
+++ b/KUSINELLA/kusinella_recipe.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>____ Recipe</title>
+    <title>Kusinella's ___ Recipe</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
 <body>
 
     <header>
-        <h1> ___ Recipe</h1>
+        <h1> Kusinella's ___ Recipe</h1>
     </header>
 
     <div class="row">
-        <a href="image1.jpg"><img src="image1.jpg" alt="Image 1"></a>
-        <a href="image2.jpg"><img src="image2.jpg" alt="Image 2"></a>
-        <a href="image3.jpg"><img src="image3.jpg" alt="Image 3"></a>
+        <a href="img/sinigang1.png"><img src="img/sinigang1.png" alt="Image 1"></a>
+        <a href="img/sinigang-na-baboy.png"><img src="img/sinigang-na-baboy.png" alt="Image 2"></a>
+        <a href="img/sinigang1.png"><img src="img/sinigang1.png" alt="Image 1"></a>
     </div>
     
         <div class="row">
@@ -53,7 +53,9 @@
 
 
     <footer>
-        <p>...</p>
+        <div class="x">
+    <p><a href="kusinella.html">Go back to the main page</a></p>
+        </div>    
     </footer>
 
 
