--- a/Week09/Act07-01.html
+++ b/Week09/Act07-01.html
@@ -1,1 +1,45 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Activity 07: Moving image</title>
+<style>
+
+  #MikuPlush {
+    position: absolute;
+    top: 20px; 
+    left: 20px; 
+    cursor: pointer;
+  }
+  
+</style>
+</head>
+  
+<body>
+
+<img id="MikuPlush" src="img/MIKU.png" width="1000" height="1000">
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>  
+  
+$(document).ready(function() {
+
+  $('#MikuPlush').click(function() {
+
+    var currentPosition = $(this).position();
+
+    var newPosition = {
+      top: currentPosition.top + 60, 
+      left: currentPosition.left + 40 
+     };
+    $(this).animate(newPosition, 500); 
+  });
+});
+  
+</script>
+
+</body>
+</html>
+
+
 
