--- a/KUSINELLA/testing.html
+++ b/KUSINELLA/testing.html
@@ -16,7 +16,7 @@
     <a href="breakfast.html"><img src="img/sinigang1.png" alt="Image 1"></a>
     <p>Breakfast?</p>
 
-    <a href="breakfast.html"><img src="img/sinigang1.png" alt="Image 1"></a>
+    <a href="lunch.html"><img src="img/sinigang1.png" alt="Image 1"></a>
     <p>Lunch/Dinner?</p>
 
     <a href="dessert.html"><img src="img/mango-graham.png" alt="Image 1"></a>
